--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>co.cask.hydrator</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
-  <version>1.8.3</version>
+  <version>1.9.0-SNAPSHOT</version>
 
   <licenses>
     <license>
@@ -59,9 +59,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cdap.version>5.0.0</cdap.version>
-    <hydrator.version>2.0.0</hydrator.version>
-    <data.pipeline.parent>system:cdap-data-pipeline[4.3.0-SNAPSHOT,6.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[4.3.0-SNAPSHOT,6.0.0-SNAPSHOT)</data.stream.parent>
+    <hydrator.version>2.1.0-SNAPSHOT</hydrator.version>
+    <data.pipeline.parent>system:cdap-data-pipeline[5.0.0-SNAPSHOT,6.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[5.0.0-SNAPSHOT,6.0.0-SNAPSHOT)</data.stream.parent>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
 
@@ -159,7 +159,7 @@
       <plugin>
         <groupId>co.cask</groupId>
         <artifactId>cdap-maven-plugin</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <configuration>
           <cdapArtifacts>
             <parent>${data.pipeline.parent}</parent>
