--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>co.cask.hydrator</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
-  <version>1.9.0-SNAPSHOT</version>
+  <version>1.9.0</version>
 
   <licenses>
     <license>
@@ -58,10 +58,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>5.1.0-SNAPSHOT</cdap.version>
-    <hydrator.version>2.1.0-SNAPSHOT</hydrator.version>
-    <data.pipeline.parent>system:cdap-data-pipeline[5.0.0-SNAPSHOT,6.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[5.0.0-SNAPSHOT,6.0.0-SNAPSHOT)</data.stream.parent>
+    <cdap.version>5.1.0</cdap.version>
+    <hydrator.version>2.1.0</hydrator.version>
+    <data.pipeline.parent>system:cdap-data-pipeline[5.1.0,6.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[5.1.0,6.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.8.0</hadoop.version>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
