--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>co.cask.hydrator</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
-  <version>1.9.0</version>
+  <version>1.9.1-SNAPSHOT</version>
 
   <licenses>
     <license>
