--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>5.1.3-SNAPSHOT</cdap.version>
-    <hydrator.version>2.1.3-SNAPSHOT</hydrator.version>
+    <cdap.version>5.1.3</cdap.version>
+    <hydrator.version>2.1.3</hydrator.version>
     <data.pipeline.parent>system:cdap-data-pipeline[5.1.0,6.0.0-SNAPSHOT)</data.pipeline.parent>
     <data.stream.parent>system:cdap-data-streams[5.1.0,6.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.8.0</hadoop.version>
