--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cdap.version>6.0.0-SNAPSHOT</cdap.version>
-    <cdap.plugin.version>2.2.0</cdap.plugin.version>
-    <data.pipeline.parent>system:cdap-data-pipeline[5.0.0-SNAPSHOT,7.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[5.0.0-SNAPSHOT,7.0.0-SNAPSHOT)</data.stream.parent>
+    <cdap.plugin.version>2.2.0-SNAPSHOT</cdap.plugin.version>
+    <data.pipeline.parent>system:cdap-data-pipeline[6.0.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[6.0.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.8.0</hadoop.version>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
