--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@
 language: java
 
 jdk:
-  - oraclejdk7
-  - oraclejdk8
+  - openjdk8
 
 env:
   - MAVEN_OPTS="-Xmx4096m -XX:MaxPermSize=128m" HADOOP_VERSION="2.4.1"
