--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.cdap.plugin</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
-  <version>1.11.0-SNAPSHOT</version>
+  <version>1.11.0</version>
 
   <licenses>
     <license>
