--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <groupId>io.cdap.plugin</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
   <version>1.13.0-SNAPSHOT</version>
+  <description>Plugins for Amazon S3</description>
+  <url>https://github.com/data-integrations/amazon-s3-plugins</url>
 
   <licenses>
     <license>
@@ -25,6 +27,13 @@
       <organizationUrl>http://cdap.io</organizationUrl>
     </developer>
   </developers>
+
+  <scm>
+    <connection>scm:git:https://github.com/data-integrations/amazon-s3-plugins.git</connection>
+    <developerConnection>scm:git:git@github.com:data-integrations/amazon-s3-plugins.git</developerConnection>
+    <url>https://github.com/data-integrations/amazon-s3-plugins.git</url>
+    <tag>HEAD</tag>
+  </scm>
 
   <issueManagement>
     <url>https://issues.cask.co/projects/CDAP</url>
