--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.4.0-SNAPSHOT</cdap.version>
+    <cdap.version>6.1.1</cdap.version>
     <cdap.plugin.version>2.6.0-SNAPSHOT</cdap.plugin.version>
     <data.pipeline.parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
     <data.stream.parent>system:cdap-data-streams[6.1.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
@@ -113,7 +113,7 @@
     </dependency>
     <dependency>
       <groupId>io.cdap.cdap</groupId>
-      <artifactId>cdap-data-pipeline</artifactId>
+      <artifactId>cdap-data-pipeline2_2.11</artifactId>
       <version>${cdap.version}</version>
       <scope>provided</scope>
     </dependency>
