--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.1.1</cdap.version>
-    <cdap.plugin.version>2.6.0</cdap.plugin.version>
-    <data.pipeline.parent>system:cdap-data-pipeline[6.1.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[6.1.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
+    <cdap.version>6.5.0-SNAPSHOT</cdap.version>
+    <cdap.plugin.version>2.7.0-SNAPSHOT</cdap.plugin.version>
+    <data.pipeline.parent>system:cdap-data-pipeline[6.5.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[6.5.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.8.0</hadoop.version>
+    <aws.sdk.version>1.11.133</aws.sdk.version>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
 
@@ -228,6 +229,11 @@
           <artifactId>avro</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+      <version>${aws.sdk.version}</version>
     </dependency>
   </dependencies>
 
