--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.cdap.plugin</groupId>
   <artifactId>amazon-s3-plugins</artifactId>
-  <version>1.15.0-SNAPSHOT</version>
+  <version>1.15.0</version>
   <description>Plugins for Amazon S3</description>
   <url>https://github.com/data-integrations/amazon-s3-plugins</url>
 
@@ -75,10 +75,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.5.0-SNAPSHOT</cdap.version>
-    <cdap.plugin.version>2.7.0-SNAPSHOT</cdap.plugin.version>
-    <data.pipeline.parent>system:cdap-data-pipeline[6.5.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[6.5.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
+    <cdap.version>6.5.0</cdap.version>
+    <cdap.plugin.version>2.7.0</cdap.plugin.version>
+    <data.pipeline.parent>system:cdap-data-pipeline[6.5.0, 7.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[6.5.0, 7.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.8.0</hadoop.version>
     <aws.sdk.version>1.11.133</aws.sdk.version>
     <main.basedir>${project.basedir}</main.basedir>
