--- a/src/e2e-test/resources/pluginParameters.properties
+++ b/src/e2e-test/resources/pluginParameters.properties
@@ -5,4 +5,5 @@ sourcePath=testdata/test.csv
 sinkPath=dummy
 region=us-east-1
 testCSV=testdata/test.csv
+outputCSV=testdata/output.csv
 outputSchema=[{"key":"id","value":"int"},{"key":"first_name","value":"string"}]
