--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>6.7.1-SNAPSHOT</cdap.version>
-    <cdap.plugin.version>2.9.1-SNAPSHOT</cdap.plugin.version>
+    <cdap.version>6.7.1</cdap.version>
+    <cdap.plugin.version>2.9.1</cdap.plugin.version>
     <data.pipeline.parent>system:cdap-data-pipeline[6.5.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.pipeline.parent>
     <data.stream.parent>system:cdap-data-streams[6.5.0-SNAPSHOT, 7.0.0-SNAPSHOT)</data.stream.parent>
     <hadoop.version>2.8.0</hadoop.version>
