--- a/src/e2e-test/resources/errorMessage.properties
+++ b/src/e2e-test/resources/errorMessage.properties
@@ -1,1 +1,2 @@
 validationSuccessMessage=No errors found.
+errorMessageInvalidCredentials=Invalid credentials: The security token included in the request is invalid. (Service: AWSSecurityTokenService; Status Code: 403; Error Code: InvalidClientTokenId;
