--- a/src/e2e-test/resources/pluginParameters.properties
+++ b/src/e2e-test/resources/pluginParameters.properties
@@ -7,3 +7,7 @@ region=us-east-1
 testCSV=testdata/test.csv
 outputCSV=testdata/output.csv
 outputSchema=[{"key":"id","value":"int"},{"key":"first_name","value":"string"}]
+testSourcePath=s3a://adfdfdf
+invalidAccessID=fsdsdfs
+invalidAccessKey=8sdfjskd
+invalidSessionToken=jhakjhsdka
